resolved whitespace issue (#78)

--- a/frontend/src/components/HomePage/homepage.css
+++ b/frontend/src/components/HomePage/homepage.css
@@ -6,87 +6,87 @@
     background-color: #f5f5f5;
 }
 
-
 .homePageTopImage {
     width: 35%;
-    padding-top:2%;
+    padding-top: 2%;
 }
 .homePageTopImage img {
-    width:100%;
-    margin:auto;
+    width: 100%;
+    margin: auto;
     border-radius: 5%;
 }
 .homePageMiddleImage {
-    width:35%;
-    padding-top:2%;
+    width: 35%;
+    padding-top: 2%;
 }
 .homePageMiddleImage img {
-    width:100%;
+    width: 100%;
     border-radius: 5%;
 }
 .homePageBottomImage {
     width: 35%;
-    padding-top:2%;
-    
+    padding-top: 2%;
 }
 .homePageBottomImage img {
-    width:100%; 
+    width: 100%;
     border-radius: 5%;
 }
-
-
 
 .homePageHighlights {
     padding-bottom: 5%;
 }
-.homePageHighlights h1  {
-    margin:auto;
-    width:15%;
-    padding-top:5%;
-    padding-bottom:5%;
+.homePageHighlights h1 {
+    margin: auto;
+    width: 15%;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 .homePageCards {
     display: flex;
     justify-content: center;
-
 }
 .homePageCard {
     display: flex;
     flex-direction: column;
-    margin:20px;
+    margin: 20px;
     background-color: #ffffff;
     width: 40%;
-
 }
 
 .homePageCard:hover {
     box-shadow: 3px 3px 3px gray;
 }
 .placeHolderImageHome {
-    width:60%;
+    width: 60%;
     margin: auto;
-    padding-top:5%;
+    padding-top: 5%;
     /* border-radius: 5%; */
 }
 .homePageCard div {
-    margin:auto;
+    margin: auto;
 }
-.homePageCard div a,h3 {
-    max-width:30%;
+.homePageCard div a,
+h3 {
+    max-width: 30%;
 }
 
 .homePageOtherResource {
-    display:flex;
+    display: flex;
     flex-direction: row;
-    margin:auto;
-    padding-top:10%;
-    padding-bottom:10%;
+    margin: auto;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 .homePageOtherResource img {
-    width:40%;
-    padding-left:5%;
+    width: 40%;
+    padding-left: 5%;
     border-radius: 5%;
 }
 .homePageWhiteSpace {
-    height:50px;
+    height: 50px;
+}
+#main-home {
+    background-color: #ffebcd;
+    width: 100%;
+    flex-grow: 1;
 }
