--- a/frontend/src/components/Sidebar/sidebar.css
+++ b/frontend/src/components/Sidebar/sidebar.css
@@ -8,7 +8,7 @@
     position: fixed;
     top: 70px;
     bottom: 0;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     margin-top: 0;
     padding-top: 0;
 }
